# Starlab

./: AAA-develop  AAA-developer-install-starlab.csh  AAA_SOURCE_ME  AAA_SOURCE_ME.sh  AUTHORS  ChangeLog  Doxyfile  EXAMPLES  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  TOOLS  VERSION.in  aclocal.m4  beautify-install  config.h.in  configure  configure.ac  configure.in  configure_starlab_with_MPI  cshrc.starlab.in  developer-install-starlab  install-starlab  run_pkira.sh  starlab.pl.in  starlab_end  starlab_end.sh  starlab_start.csh.in  starlab_start.in  starlab_start.sh  starlab_start.sh.in  version.m4
include/: Makefile.am  _dyn_.h  bound3.h  c_stdinc.h  chydro.h  config.h  config.h.in  diag.h  dyn.h  dyn_kepler.h  grape4.h  grape6.h  hdyn.h  hdyn_kepler.h  hop.h  hydro.h  hydrobase.h  kepler.h  kira.h  node.h  pdyn.h  pp3_widget.h  scatter.h  scatter3.h  sdyn.h  sdyn3.h  sigma3.h  slow_binary.h  starbase.h  starlab_vector.h  static_star.h  stdinc.h  story.h  tdyn.h  util_io.h  util_math.h  worldline.h  xreal.h
include/star/: constants.h  double_star.h  double_support.h  dstar_to_dyn.h  single_star.h  sstar_to_dyn.h  star.h  star_state.h  star_support.h
src/: Makefile  Makefile.am  Makefile.in
src/gfx/: Local_setup.inc  Make_tar  Makefile  Makefile.am  Makefile.in  Makefile.standalone  STANDALONE_README
src/gfx/draw/: Makefile  READ_ME  autocorrelation.f  box.f  cfit.c  cinter.c  contexts.f  ctox.c  decode.f  errors.f  expand.f  fitxy.f  genfit.f  get_input.f  get_token.f  getline.f  getnext.f  help.f  histogram.f  integrate.f  lsfit.f  make_data.f  mcdraw.f  mcdraw_c.c  nextcmd.f  powerspectrum.f  readall.f  readcols.f  readin.f  rebin.f  sarith.f  save_context.f  smooth.f  sort.f  strings.f  svdfit.f  swap.f  threedplot.f  translate.h  twodplot.f  (+6 more)
src/gfx/libs/: Makefile  SIM.UNF  SIM.out  aerrbars.f  aho.f  alin.f  arrow.f  aspectratio.f  axes.f  bounds.f  box.f  boxf.f  clrstr.f  cnomber.f  cnombr.f  compoz.f  contor.f  contor1.f  contor2.f  convec.f  csimbol.f  cutils.c  devicename.f  digital.f  displaytext.f  dline.f  dplot.f  drline.f  eframe.f  energies.f  enumbr.f  errbars.f  example.f  fonts.f  frinches.f  frlabfrm.f  frlgset.f  frlgxdr.f  frlgydr.f  frlndiv.f  (+88 more)
src/gfx/lux/: Makefile  Makefile.am  Makefile.in  Xnames.h  color.c  data.c  demo.c  dialog.c  draw.c  draw1.c  hydro2.c  interface.c  make_data.c  mcd.c  plot_data.c  simple.c  simple_plot.h  termio.c  utility.c  win.c  win.h  ximage.c  ximage_compiled.c
src/gfx/lux++/: Makefile  Makefile.am  Makefile.in  c_lux.h  c_stdinc.h  dialog++.c  local.h
src/gfx/palettes/: Grey  Purple  READ_ME  Random  Random.alt  Standard  make_grey.c  make_map.c  random_map.c
src/gfx/util/: Makefile  Makefile.am  Makefile.in  colormaps.C  data.C  encode_gif.C  image_fmt.h  make_data.C  make_header.C  make_image.C  old_make_image.C  sun_header.C  test_byte.C  write_gif.C  write_image.C  write_png.C  write_sun.C
src/harpsims/: Makefile  Makefile.am  Makefile.in  harp3fastsim-ok.c  harp3fastsim.c  harp3fastsim.cmp.c  harp3futil.c
src/hydro/: Makefile  Makefile.am  Makefile.in
src/hydro/evolve/: Makefile  Makefile.am  Makefile.in  chydro_leapfrog.C  hydro_leapfrog.C
src/hydro/init/: Makefile  Makefile.am  Makefile.in  addchydro.C  addhydro.C
src/hydro/util/: Makefile  Makefile.am  Makefile.in  chydro_io.C  hydro_io.C
src/node/: Makefile  Makefile.am  Makefile.in
src/node/dyn/: Makefile  Makefile.am  Makefile.in  stpcpy.c
src/node/dyn/_dyn_/: Makefile  Makefile.am  Makefile.in  README  _dyn_ev.C  _dyn_io.C  _dyn_slow.C  flat_hermite.C  no_xreal.C  set_radius.C
src/node/dyn/evolve/: Makefile  Makefile.am  Makefile.in  dyn_ev.C  leapfrog.C
src/node/dyn/hdyn/: Makefile  Makefile.am  Makefile.in
src/node/dyn/init/: Makefile  Makefile.am  Makefile.in  Testfile  addplummer.C  addstoa.C  aking.f  apply_plummer.C  cutrandomsample.C  grow_black_hole.C  king.f  makebinary.C  (+25 more)
src/node/util/: Makefile  Makefile.am  Makefile.in  Testfile  add_daughter_node.C  add_unique_index.C  display_subtrees.C  hydrobase_io.C  m_bar.C  make_single_node.C  makemass.C  makemultiples.C  makenode.C  makesecondary.C  mass.C  mass_dist.C  mk_single_node.C  mkmass.C  mksecondary.C  node_io.C  node_tt.C  pretty_print_tree.C  print_normal.C  renumber.C  rmnode.C  rmq.C  rmtree.C  setmass.C  snapprune.C  starbase_init.C  starbase_io.C  std_rename_nodes.C  story_test.C  test.C  tree_io.C
src/star/: Makefile  Makefile.am  Makefile.in
src/star/dstar/: Makefile  Makefile.am  Makefile.in
src/star/rdc/: Makefile  Makefile.am  SeBa_hist.C  SeBa_hist.h  list_sdumb.C  make_ccd.C  makepovfile.C  mk_ccd.C  mkpovfile.C  plot_SeBa.f  rdc_SeBa.C  rs_birthrate.C  rs_countsn.C  rs_findtype.C  rs_population.C  rs_reorder.C  rs_scenarios.C  rs_snapshot.C
src/star/sstar/: Makefile  Makefile.am  Makefile.in
src/star/util/: BminV.tab  BolCor.tab  Makefile  Makefile.am  Makefile.in  OortAB.C  RminI.tab  UminB.tab  VminR.tab  calculate_individual_energies.C  coagulation.C  conv_dyn_to_star.C  conv_star_to_dyn.C  dummy.C  encountervelocity.C  imf_evolve.C  kingfit.C  lmt_to_ubvri.C  makedyn_from_input.C  nn_distribution.C  proj_lagr.C  rcore.C  rcore2.C  rcore2_bk.C  rearrange_mf.C  red_star_cluster.C  red_stellar_system.C  sint.C  sint.h  test_sint.C
src/star/xutil/: Makefile  Makefile.am  Makefile.in  dummy.C  dyn_util.C  dyn_util.h  gfx_util.C  hrd_util.C  hrd_util.h  xhrdplot.C  xhrdplot.h  xhrdplot2.C  xstarplot.C  xstarplot.h
src/std/: Makefile  Makefile.am  Makefile.in  error.C  gethist.C  mycat.C  par_to_use.C  pgetopt.C  precision.C  randinter.C  runtime_help.C  set_up.C  setup_starlab.C  sofar_story.C  stats.C  story.C  test.C  test_vector.C  time.C  util_io.C  util_math.C  util_unformatted_io.C  xreal.C  xtest.C
src/std/pjt/: Makefile  Makefile.pjt  README.pjt  getparam.C  getparam.cc  main.C  main.cc  mys.cc  p_description.C  p_description.cc  p_examples.C  p_examples.cc  p_keywords.C  p_keywords.cc  p_usage.C  p_usage.cc  p_version.C  p_version.cc  program.C  program.cc  program.h  test1.C  test1.cc  test2.C  test2.cc
(+996 files in other folders)
